# copilot-demo

./: .env.example  .gitignore  README.md  requirements.in  requirements.txt
.github/instructions/: general.instructions.md  github.instructions.md  markdown.instructions.md
.github/prompts/: Learn-a-package.prompt.md  Update-PR-description.prompt.md
docs/: weather-cli-design.md
projects/weather/: README.md  pyproject.toml  requirements.txt
projects/weather/src/: weather_cli.py
projects/weather/src/utils/: api.py
projects/weather/src/weather_cli/: __init__.py  cli.py
projects/weather/src/weather_cli/weather/: api.py
projects/weather/tests/: test_sanity.py  test_weather_api.py
