[project]
name = "weather-cli"
version = "0.1.0"
description = "A command-line interface for fetching weather data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click",
    "geopy",
    "openmeteo-requests",
    "openmeteo-sdk",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pyyaml",
    "ruff",
]

[project.scripts]
weather-cli = "weather_cli:cli"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
